branches/0.0.8/Pon_off/unit1.rst

# hash value = 136920065
unit1.message0=#208#146#208#189#208#184#208#188#208#176#208#189#208#184#208+
#181'!'


# hash value = 117355182
unit1.message1=#208#151#208#176#208#191#209#131#209#129#208#186' '#209#141+
#209#130#208#190#208#185' '#208#191#209'€'#208#190#208#179#209'€'#208#176+
#208#188#208#188#209#139' '#208#178#208#190#208#183#208#188#208#190#208#182+
#208#181#208#189' '#209#130#208#190#208#187#209#140#208#186#208#190' '#208+
#191#208#190#208#180' '#208#176#208#180#208#188#208#184#208#189#208#184#209+
#129#209#130#209'€'#208#176#209#130#208#190#209'€'#208#190#208#188'. '#208+
#157#208#176#208#182#208#188#208#184#209#130#208#181' <OK> '#208#180#208#187+
#209#143' '#208#190#209#130#208#186#208#176#208#183#208#176' '#208#190#209+
#130' '#208#183#208#176#208#191#209#131#209#129#208#186#208#176'.'


# hash value = 246673038
unit1.message2=#208#148#209'€'#209#131#208#179#208#176#209#143' '#209#130+
#208#176#208#186#208#176#209#143' '#208#182#208#181' '#208#191#209'€'#208+
#190#208#179#209'€'#208#176#208#188#208#188#208#176' '#209#131#208#182#208+
#181' '#209'€'#208#176#208#177#208#190#209#130#208#176#208#181#209#130' '#209+
#129' VPN PPTP. '#208#157#208#176#208#182#208#188#208#184#209#130#208#181+
' <OK> '#208#180#208#187#209#143' '#208#190#209#130#208#186#208#176#208#183+
#208#176' '#208#190#209#130' '#208#180#208#178#208#190#208#185#208#189#208+
#190#208#179#208#190' '#208#183#208#176#208#191#209#131#209#129#208#186#208+
#176'.'


# hash value = 48157950
unit1.message3=#208#161#208#189#208#176#209#135#208#176#208#187#208#176' '+
#209#129#208#186#208#190#208#189#209#132#208#184#208#179#209#131#209'€'#208+
#184#209'€'#209#131#208#185#209#130#208#181' '#209#129#208#190#208#181#208+
#180#208#184#208#189#208#181#208#189#208#184#208#181': '#208#156#208#181#208+
#189#209#142', '#208#163#209#130#208#184#208#187#208#184#209#130#209#139','+
' '#208#161#208#184#209#129#209#130#208#181#208#188#208#189#209#139#208#181+
' ('#208#184#208#187#208#184' '#208#156#208#181#208#189#209#142', '#208#152+
#208#189#209#130#208#181#209'€'#208#189#208#181#209#130'), '#208#157#208#176+
#209#129#209#130#209'€'#208#190#208#185#208#186#208#176' VPN PPTP ('#208#157+
#208#176#209#129#209#130#209'€'#208#190#208#185#208#186#208#176' '#209#129+
#208#190#208#181#208#180#208#184#208#189#208#181#208#189#208#184#209#143' '+
'VPN PPTP).'


# hash value = 130432126
unit1.message4='No ethernet. C'#208#181#209#130#208#181#208#178#208#190#208+
#185' '#208#184#208#189#209#130#208#181#209'€'#209#132#208#181#208#185#209+
#129' '#208#180#208#187#209#143' VPN PPTP '#208#189#208#181#208#180#208#190+
#209#129#209#130#209#131#208#191#208#181#208#189'. '#208#149#209#129#208#187+
#208#184' '#208#182#208#181' '#208#190#208#189' '#208#180#208#190#209#129+
#209#130#209#131#208#191#208#181#208#189', '#209#130#208#190' '#209#131#209+
#129#209#130#208#176#208#189#208#190#208#178#208#184#209#130#208#181' "'#208+
#157#208#181' '#208#186#208#190#208#189#209#130#209'€'#208#190#208#187#208+
#184#209'€'#208#190#208#178#208#176#209#130#209#140' state '#209#129#208#181+
#209#130#208#181#208#178#208#190#208#179#208#190' '#208#186#208#176#208#177+
#208#181#208#187#209#143'" '#208#178' '#208#154#208#190#208#189#209#132#208+
#184#208#179#209#131#209'€'#208#176#209#130#208#190#209'€'#208#181'.'


# hash value = 16640174
unit1.message5='No link. '#208#161#208#181#209#130#208#181#208#178#208#190+
#208#185' '#208#186#208#176#208#177#208#181#208#187#209#140' '#208#180#208+
#187#209#143' VPN PPTP '#208#189#208#181#208#191#208#190#208#180#208#186#208+
#187#209#142#209#135#208#181#208#189'.'


# hash value = 71565728
unit1.message6=#208#161#208#190#208#181#208#180#208#184#208#189#208#181#208+
#189#208#184#208#181' '


# hash value = 213592110
unit1.message7=' '#209#131#209#129#209#130#208#176#208#189#208#190#208#178+
#208#187#208#181#208#189#208#190

# hash value = 265115170
unit1.message8=' '#208#190#209#130#209#129#209#131#209#130#209#129#209#130+
#208#178#209#131#208#181#209#130

# hash value = 104507582
unit1.message9='No link. '#208#161#208#181#209#130#208#181#208#178#208#190+
#208#185' '#208#186#208#176#208#177#208#181#208#187#209#140' '#208#180#208+
#187#209#143' VPN PPTP '#208#189#208#181#208#191#208#190#208#180#208#186#208+
#187#209#142#209#135#208#181#208#189'. '#208#144' '#209'€'#208#181#208#186+
#208#190#208#189#208#189#208#181#208#186#209#130' '#208#189#208#181' '#208+
#178#208#186#208#187#209#142#209#135#208#181#208#189'.'


# hash value = 79712232
unit1.message10=#208#146#209#139#209#133#208#190#208#180' '#208#177#208#181+
#208#183' '#208#176#208#178#208#176#209'€'#208#184#208#184

# hash value = 98426840
unit1.message11=#208#146#209#139#209#133#208#190#208#180' '#208#191#209'€'+
#208#184' '#208#176#208#178#208#176#209'€'#208#184#208#184

# hash value = 92508176
unit1.message12=#208#163#209#129#209#130#208#176#208#189#208#176#208#178#208+
#187#208#184#208#178#208#176#208#181#209#130#209#129#209#143' '#209#129#208+
#190#208#181#208#180#208#184#208#189#208#181#208#189#208#184#208#181' '

